src/main/java/oo2/redictado/antlr4/BythonParser.java
// Generated from BythonParser.g4 by ANTLR 4.3
package oo2.redictado.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_LITERAL=57, FROM=9, CLASS=22, FINALLY=55, MINUS=28, LPAR=14, BREAK=50, 
		ELSE=8, TRY=53, ID=56, NONE=49, IF=6, LESSEQUAL=39, ELIF=7, IN=44, PLUS_ASSIGN=29, 
		FOR=4, DOT=24, TRUE=47, SLASH_ASSIGN=32, IS=45, EXCEPT=54, LAMBDA=2, STAR_ASSIGN=31, 
		NOTEQUAL=36, AS=11, RBRACK=17, NOT=43, RBRACE=19, PASS=52, LBRACK=16, 
		AND=41, LESS=37, LBRACE=18, PLUS=27, SEMI=13, RPAR=15, ASSIGN=12, COMMENT=61, 
		RETURN=3, IMPORT=10, WS=60, COMMA=20, OR=42, DEF=1, DOUBLE_LITERAL=58, 
		EQUAL=35, SLASH=26, GREATER=38, COLON=21, SELF=23, MINUS_ASSIGN=30, CONTINUE=51, 
		NUMBER_LITERAL=34, STAR=25, CallableLiteral=33, GREATEREQUAL=40, WHILE=5, 
		FALSE=48, STRING_LITERAL=59, UNION=46;
	public static final String[] tokenNames = {
		"<INVALID>", "'def'", "'lambda'", "'return'", "'for'", "'while'", "'if'", 
		"'elif'", "'else'", "'from'", "'import'", "'as'", "'='", "';'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "','", "':'", "'class'", "'self'", 
		"'.'", "'*'", "'/'", "'+'", "'-'", "'+='", "'-='", "'*='", "'/='", "CallableLiteral", 
		"NUMBER_LITERAL", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'and'", 
		"'or'", "'not'", "'in'", "'is'", "'|'", "'True'", "'False'", "'None'", 
		"'break'", "'continue'", "'pass'", "'try'", "'except'", "'finally'", "ID", 
		"INTEGER_LITERAL", "DOUBLE_LITERAL", "STRING_LITERAL", "WS", "COMMENT"
	};
	public static final int
		RULE_program = 0, RULE_classDecl = 1, RULE_classMember = 2, RULE_functionDecl = 3, 
		RULE_methodDecl = 4, RULE_identifierList = 5, RULE_methodParamList = 6, 
		RULE_block = 7, RULE_statement = 8, RULE_assignment = 9, RULE_simpleAssignment = 10, 
		RULE_implicitAssignment = 11, RULE_compoundAssignment = 12, RULE_indexAssignment = 13, 
		RULE_methodCall = 14, RULE_ifStatement = 15, RULE_elifClause = 16, RULE_elseClause = 17, 
		RULE_whileStatement = 18, RULE_forStatement = 19, RULE_returnStatement = 20, 
		RULE_importStatement = 21, RULE_tryExceptStatement = 22, RULE_exceptionList = 23, 
		RULE_moduleName = 24, RULE_aliasName = 25, RULE_expression = 26, RULE_valueExpression = 27, 
		RULE_indexAccess = 28, RULE_lambdaExpression = 29, RULE_callableExpression = 30, 
		RULE_collection = 31, RULE_listLiteral = 32, RULE_tupleLiteral = 33, RULE_dictLiteral = 34, 
		RULE_setLiteral = 35, RULE_propertyAccess = 36, RULE_objectProperty = 37, 
		RULE_argumentList = 38, RULE_chainStart = 39, RULE_chainedMethodCall = 40, 
		RULE_chainedExpression = 41;
	public static final String[] ruleNames = {
		"program", "classDecl", "classMember", "functionDecl", "methodDecl", "identifierList", 
		"methodParamList", "block", "statement", "assignment", "simpleAssignment", 
		"implicitAssignment", "compoundAssignment", "indexAssignment", "methodCall", 
		"ifStatement", "elifClause", "elseClause", "whileStatement", "forStatement", 
		"returnStatement", "importStatement", "tryExceptStatement", "exceptionList", 
		"moduleName", "aliasName", "expression", "valueExpression", "indexAccess", 
		"lambdaExpression", "callableExpression", "collection", "listLiteral", 
		"tupleLiteral", "dictLiteral", "setLiteral", "propertyAccess", "objectProperty", 
		"argumentList", "chainStart", "chainedMethodCall", "chainedExpression"
	};

	@Override
	public String getGrammarFileName() { return "BythonParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public TerminalNode EOF() { return getToken(BythonParser.EOF, 0); }
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEF) | (1L << LAMBDA) | (1L << RETURN) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << FROM) | (1L << IMPORT) | (1L << LPAR) | (1L << LBRACK) | (1L << LBRACE) | (1L << CLASS) | (1L << SELF) | (1L << CallableLiteral) | (1L << NUMBER_LITERAL) | (1L << NOT) | (1L << BREAK) | (1L << CONTINUE) | (1L << PASS) | (1L << TRY) | (1L << ID))) != 0)) {
				{
				setState(87);
				switch (_input.LA(1)) {
				case CLASS:
					{
					setState(84); classDecl();
					}
					break;
				case DEF:
					{
					setState(85); functionDecl();
					}
					break;
				case LAMBDA:
				case RETURN:
				case FOR:
				case WHILE:
				case IF:
				case FROM:
				case IMPORT:
				case LPAR:
				case LBRACK:
				case LBRACE:
				case SELF:
				case CallableLiteral:
				case NUMBER_LITERAL:
				case NOT:
				case BREAK:
				case CONTINUE:
				case PASS:
				case TRY:
				case ID:
					{
					setState(86); statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BythonParser.ID, 0); }
		public TerminalNode RBRACE() { return getToken(BythonParser.RBRACE, 0); }
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(BythonParser.LBRACE, 0); }
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public TerminalNode LPAR() { return getToken(BythonParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(BythonParser.RPAR, 0); }
		public TerminalNode CLASS() { return getToken(BythonParser.CLASS, 0); }
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(CLASS);
			setState(95); match(ID);
			setState(101);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(96); match(LPAR);
				setState(98);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(97); identifierList();
					}
				}

				setState(100); match(RPAR);
				}
			}

			setState(103); match(LBRACE);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF || _la==ID) {
				{
				{
				setState(104); classMember();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassMemberContext extends ParserRuleContext {
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public SimpleAssignmentContext simpleAssignment() {
			return getRuleContext(SimpleAssignmentContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(BythonParser.SEMI, 0); }
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterClassMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitClassMember(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitClassMember(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classMember);
		try {
			setState(116);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(112); methodDecl();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(113); simpleAssignment();
				setState(114); match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BythonParser.ID, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode DEF() { return getToken(BythonParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(BythonParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(BythonParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(DEF);
			setState(119); match(ID);
			setState(120); match(LPAR);
			setState(122);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(121); identifierList();
				}
			}

			setState(124); match(RPAR);
			setState(125); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BythonParser.ID, 0); }
		public MethodParamListContext methodParamList() {
			return getRuleContext(MethodParamListContext.class,0);
		}
		public TerminalNode DEF() { return getToken(BythonParser.DEF, 0); }
		public TerminalNode LPAR() { return getToken(BythonParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(BythonParser.RPAR, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(DEF);
			setState(128); match(ID);
			setState(129); match(LPAR);
			setState(131);
			_la = _input.LA(1);
			if (_la==SELF || _la==ID) {
				{
				setState(130); methodParamList();
				}
			}

			setState(133); match(RPAR);
			setState(134); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(BythonParser.ID); }
		public List<TerminalNode> COMMA() { return getTokens(BythonParser.COMMA); }
		public TerminalNode ID(int i) {
			return getToken(BythonParser.ID, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(BythonParser.COMMA, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(ID);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(137); match(COMMA);
				setState(138); match(ID);
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodParamListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(BythonParser.ID); }
		public TerminalNode SELF() { return getToken(BythonParser.SELF, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BythonParser.COMMA); }
		public TerminalNode ID(int i) {
			return getToken(BythonParser.ID, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(BythonParser.COMMA, i);
		}
		public MethodParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodParamList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterMethodParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitMethodParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitMethodParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodParamListContext methodParamList() throws RecognitionException {
		MethodParamListContext _localctx = new MethodParamListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodParamList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !(_la==SELF || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(145); match(COMMA);
				setState(146); match(ID);
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode RBRACE() { return getToken(BythonParser.RBRACE, 0); }
		public TerminalNode LBRACE() { return getToken(BythonParser.LBRACE, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(LBRACE);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LAMBDA) | (1L << RETURN) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << FROM) | (1L << IMPORT) | (1L << LPAR) | (1L << LBRACK) | (1L << LBRACE) | (1L << SELF) | (1L << CallableLiteral) | (1L << NUMBER_LITERAL) | (1L << NOT) | (1L << BREAK) | (1L << CONTINUE) | (1L << PASS) | (1L << TRY) | (1L << ID))) != 0)) {
				{
				{
				setState(153); statement();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TryExceptStatementContext tryExceptStatement() {
			return getRuleContext(TryExceptStatementContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(BythonParser.BREAK, 0); }
		public TerminalNode PASS() { return getToken(BythonParser.PASS, 0); }
		public TerminalNode SEMI() { return getToken(BythonParser.SEMI, 0); }
		public TerminalNode CONTINUE() { return getToken(BythonParser.CONTINUE, 0); }
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement);
		try {
			setState(177);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161); block();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162); expression();
				setState(163); match(SEMI);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(165); ifStatement();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(166); whileStatement();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(167); forStatement();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(168); returnStatement();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(169); importStatement();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(170); tryExceptStatement();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(171); match(CONTINUE);
				setState(172); match(SEMI);
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(173); match(BREAK);
				setState(174); match(SEMI);
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(175); match(PASS);
				setState(176); match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public SimpleAssignmentContext simpleAssignment() {
			return getRuleContext(SimpleAssignmentContext.class,0);
		}
		public CompoundAssignmentContext compoundAssignment() {
			return getRuleContext(CompoundAssignmentContext.class,0);
		}
		public IndexAssignmentContext indexAssignment() {
			return getRuleContext(IndexAssignmentContext.class,0);
		}
		public ImplicitAssignmentContext implicitAssignment() {
			return getRuleContext(ImplicitAssignmentContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BythonParserListener ) ((BythonParserListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BythonParserVisitor ) return ((BythonParserVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignment);
		try {
			setState(183);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); simpleAssignment();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180); implicitAssignment();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(181); compoundAssignment();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(182); indexAssignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleAssignmentContext extends ParserRuleContext {
